solving the issue  of part4 not showing the margin-bottom

--- a/layout design/per.css
+++ b/layout design/per.css
@@ -178,6 +178,7 @@ body {
     }
     /* ---------giving proper margin to div  */
     #section1,
+    #section2,
    #section2 > #secSecSub1,
     #part1,
     #part2,
